@@ -26,7 +26,6 @@ has matches => (
   traits   => [ 'Hash' ],
   handles  => {
     matches => 'elements',
-    _matches_href => 'shallow_clone',
   },
 );
 
