@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          tests rewritten to use Test::Deep::UnorderedPairs (Karen Etheridge)
 
 0.004     2013-04-13 16:15:51 Europe/London
           doc fixes - thanks, Karen Etheridge!
